# petesbrain

./: !inbox  .gitignore  .sync-checksums.json  .sync-confi  .sync-config  BATCH-3-READY.md  LAPTOP-SETUP-COMMANDS.txt  README.md  SECURITY-FIX-DEC-22.sh  SECURITY-REMEDIATION-COMPLETE-DEC-22-2025.md  SECURITY-REMEDIATION-DEC-22-2025.md  SESSION-CONTINUITY-IMPLEMENTATION-SUMMARY.md  audit  claude-ai-custom-instructions.txt  diagnose-mcp-tools.sh  generate-all-task-views.py  generate-tasks-overview.py  migrate-overnight.sh  migrate-product-feeds-tasks-FINAL.py  process_manual_notes.py  prune_reddit_articles.py  save-notes.sh  search-session-history.py  setup-session-continuity.py  task-audit-summary.json  tasks-overview.html?v=1763486457  tasks-to-remove.json  temp_sync_google_ads_creds.sh  test-script.py  test_new_rss_feeds.py  update-plists.sh  verify_completion.sh
.claude/: CLAUDE.md  settings.json
.sync-snapshot/: HEAD  timestamp
agents/: README.md
analysis/: wedding-venues-trends-comparison.py
clients/: README.md
docs/: 8020BRAIN-ANALYSIS-REPORT.md  8020BRAIN-ANALYSIS-STATUS.md  ADDING-A-NEW-CLIENT.md  AGENT-MONITORING-GUIDE.md  AGENT-MONITORING-QUICK-REF.md  AGENTS-MIGRATION-COMPLETE.md  AI-INBOX-PROCESSING.md  ANTHROPIC-API-USAGE-ANALYSIS.md  API-OPTIMIZATION-COMPLETE-2025-11-20.md  AUDIT-FRAMEWORK-GUIDE.md  AUTOMATION.md  BACKUP-SAFETY-SYSTEM.md  BACKUP-SYSTEM.md  BI-DIRECTIONAL-TASK-SYNC-SETUP.md  BI-DIRECTIONAL-TASK-SYNC.md  BLOG-CONTENT-RULES.md  CHECK-PYTHON3.md  (+206 more)
infrastructure/mcp-servers/google-tasks-mcp-server/: pyproject.toml  setup_oauth.py
(+6075 files in other folders)
